sub -> alterSub + .promise, show categories

--- a/app/partials/categories/showCategories.html
+++ b/app/partials/categories/showCategories.html
@@ -1,6 +1,6 @@
 <div id="main-wrapper">
   <div id="main" class="container">
-    <h2><span class="pink">{{user.username}}</span>/</h2>
+    <h2><span class="pink">{{User.username}}</span>/</h2>
 
     <table class="table table-striped table-hover">
       <thead>
@@ -10,8 +10,8 @@
         </tr>
       </thead>
       <tbody>
-        <tr ng-repeat="cat in categories">
-          <td><a href="/{{user.username}}/{{cat._id}}">{{cat.name}}</a></td>
+        <tr ng-repeat="cat in Category">
+          <td><a href="/{{User.username}}/{{cat._id}}">{{cat.name}}</a></td>
           <td>{{cat.description}}</td>
         </tr>
       </tbody>
