--- a/app/partials/categories/showCategories.html
+++ b/app/partials/categories/showCategories.html
@@ -11,7 +11,7 @@
       </thead>
       <tbody>
         <tr ng-repeat="cat in Category">
-          <td><a href="/{{User.username}}/{{cat._id}}">{{cat.name}}</a></td>
+          <td><a href="#/{{User.username}}/{{cat._id}}">{{cat.name}}</a></td>
           <td>{{cat.description}}</td>
         </tr>
       </tbody>
